--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "books-shop",
+  "homepage": "https://IlliaMatushchak.github.io/books-shop-react",
   "version": "0.1.0",
   "author": "Illia Matushchak",
   "private": true,
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
